# sweatstack-streamlit-template

./: .env.template  .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  manifest.json  proxy.py  pwa.toml  pyproject.toml  streamlit_app.py  supervisord.conf
.streamlit/: config.toml
