[project]
name = "sweatstack-streamlit-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.5",
    "cryptography>=44.0.0",
    "fastapi>=0.123.7",
    "httpx[http2]>=0.28.1",
    "itsdangerous>=2.2.0",
    "sweatstack[streamlit]>=0.57.0",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]
